tools/architecture/validate-source-imports/tests/fixtures/invalid/domain-imports-adapter/src/index.ts
import { db } from "@platform/adapters-postgres";
export const packageName = "@platform/domain-core";
